@@ -1,0 +1,34 @@
+/* XPM */
+static char * icon_dnd_xpm[] = {
+"15 15 16 1",
+" 	c None",
+".	c #C1BB7C",
+"+	c #CFC395",
+"@	c #D2BE94",
+"#	c #A69C45",
+"$	c #A49A43",
+"%	c #AD9C53",
+"&	c #908125",
+"*	c #726751",
+"=	c #867B23",
+"-	c #84760E",
+";	c #72660E",
+">	c #7B4900",
+",	c #FFFFFF",
+"'	c #000000",
+")	c #666666",
+"       .       ",
+"      +@#      ",
+"      $%&      ",
+"    * =-; *    ",
+"   *   >   *   ",
+"  *         *  ",
+" *           * ",
+"*,,,,,,,,,,,,,*",
+"*,'',,',','',,*",
+"*,',',')',',',*",
+"*,',',')',',',*",
+"*,'',,',','',,*",
+"*,,,,,,,,,,,,,*",
+"***************",
+"               "};
