@@ -1,0 +1,83 @@
+/* XPM */
+static char * icon_occ_xpm[] = {
+"15 15 65 1",
+" 	c None",
+".	c #89898D",
+"+	c #80809E",
+"@	c #7F7F9E",
+"#	c #7F7F88",
+"$	c #86879A",
+"%	c #6870ED",
+"&	c #5F6DED",
+"*	c #5F6CED",
+"=	c #5E6CED",
+"-	c #5C6AEC",
+";	c #5969EA",
+">	c #636DEB",
+",	c #797AA0",
+"'	c #535353",
+")	c #919394",
+"!	c #A7BEC9",
+"~	c #84ACC0",
+"{	c #79A0B4",
+"]	c #88B0C4",
+"^	c #79A0B5",
+"/	c #739CB2",
+"(	c #73A0B7",
+"_	c #98B6C5",
+":	c #8E9395",
+"<	c #7BA2B6",
+"[	c #658B9E",
+"}	c #6F95A9",
+"|	c #7AA3B7",
+"1	c #6890A3",
+"2	c #77A4BB",
+"3	c #97B6C5",
+"4	c #A5BCC8",
+"5	c #85AFC5",
+"6	c #82ABC1",
+"7	c #80AAC0",
+"8	c #83AFC6",
+"9	c #7BA8BF",
+"0	c #7CABC2",
+"a	c #97B5C5",
+"b	c #A6BCC7",
+"c	c #7FA3B6",
+"d	c #7294A5",
+"e	c #7194A5",
+"f	c #7396A7",
+"g	c #81A9BD",
+"h	c #789DB0",
+"i	c #9DB8C5",
+"j	c #8B8C8D",
+"k	c #A1ABB0",
+"l	c #898C8E",
+"m	c #6D6C6D",
+"n	c #656565",
+"o	c #787878",
+"p	c #808080",
+"q	c #7E7E7E",
+"r	c #797979",
+"s	c #4F4F4F",
+"t	c #777777",
+"u	c #818181",
+"v	c #737373",
+"w	c #505050",
+"x	c #7F7F7F",
+"y	c #7D7D7D",
+"z	c #626262",
+"  .+++@@@+@#   ",
+"  $%&&*=-;>,'  ",
+"  )!~{]^/(_:'  ",
+"  )!<[}|123:'  ",
+"  )4567890a:'  ",
+"  )bcdefghi:'  ",
+"  jkkkkkkkkl'  ",
+"  mnnopqrnnns  ",
+"     tuqvw     ",
+"    qqxqytz    ",
+"               ",
+"   sss         ",
+"   s s ss ss   ",
+"   s s s  s    ",
+"   sss ss ss s "};
